# cashier-app-tauri

./: package-lock.json  package.json
src/: all-product.html  index.html  main.js
src-tauri/: .env  Cargo.toml  db.rs  product.json  tauri.conf.json
src-tauri/src/: commands.rs  main.rs
src/pages/: all-product.html  home.html
