[package]
name = "cashier-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cashier_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "postgres", "macros", "bigdecimal", "chrono", "time"] }
dotenvy = "0.15"
bigdecimal = { version = "0.3", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde"] }
num-traits = "0.2"
chrono = { version = "0.4", features = ["serde"] }
